# cpp_meson_project

./: .dockerignore  .gitignore  BUILD_INSTRUCTIONS.md  Dockerfile  README.md  docker-compose.yml  main.cpp  meson.build
.github/workflows/: build.yml  docker-build.yml  release.yml
io/: meson.build
io/headers/: io_utils.hpp
io/src/: io_utils.cpp
maths/: meson.build
maths/headers/: math_utils.hpp
maths/src/: math_utils.cpp
scripts/: docker-build-local-multiplatform.sh  docker-build-multiplatform.sh  docker-build.sh  docker-test.sh
stringm/: meson.build
stringm/headers/: string_utils.hpp
stringm/src/: string_utils.cpp
